[fix/fix-bug] social icons vertical align in editor

--- a/src/editor/blocks/social-icons/styles/editor.scss
+++ b/src/editor/blocks/social-icons/styles/editor.scss
@@ -11,4 +11,8 @@
     //   margin-top: 0!important;
     // }
 
+    &.horizontal.wp-block-gutenverse-social-icons {
+        display: inline-flex !important;
+    }
+
 }
